# lumen

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: milestone3-linux-sandbox.yml
apps/desktop/: README.md  package.json
apps/desktop/src/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/tests/: security_config.rs
apps/web/: README.md  package.json  playwright.config.ts  vite.config.ts
apps/web/src/: app.css
apps/web/src/lib/: api.test.ts  api.ts  connection.ts  mockData.ts
apps/web/src/lib/components/: AppShell.svelte  ApprovalItem.svelte  ApprovalItem.test.ts  ConnectionDialog.svelte  PluginAuthority.svelte  PluginFailures.svelte  PluginReview.svelte  PluginSettings.svelte
apps/web/src/lib/components/views/: ApprovalsView.svelte  AuditLogView.svelte  ChatView.svelte  JobsView.svelte  ModelsView.svelte  OverviewView.svelte  PluginsView.svelte  SettingsView.svelte
apps/web/src/lib/mock/: index.ts  types.ts  yaml.ts
apps/web/src/lib/styles/: app.css
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/approvals/: +page.svelte
apps/web/src/routes/audit/: +page.svelte
apps/web/src/routes/automation/: +page.svelte
apps/web/src/routes/egress/: +page.svelte
apps/web/src/routes/plugins/: +page.svelte
apps/web/src/routes/skills/: +page.svelte
apps/web/tests/: control-surface.spec.ts
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: config.rs  extension_runtime.rs  lib.rs  main.rs  runtime.rs
crates/lumen-cli/src/runtime/: security_tests.rs
crates/lumen-cli/tests/: commands.rs  config.rs  extensions.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: action.rs  approval.rs  audit.rs  automation.rs  capability.rs  egress.rs  executor.rs  extension.rs  identity.rs  lib.rs  model.rs  policy.rs  run.rs  secret.rs
crates/lumen-core/tests/: approval.rs  automation.rs  core_security.rs  egress.rs  extension_contract.rs  run_orchestrator.rs
crates/lumen-db/: Cargo.toml
crates/lumen-db/migrations/: 0001_initial.sql  0002_hardened_tools.sql  0003_extension_runtime.sql  0004_controlled_egress.sql  0005_durable_automation.sql
crates/lumen-db/src/: audit.rs  automation.rs  egress.rs  extensions.rs  lib.rs  migrations.rs  repositories.rs
crates/lumen-db/tests/: automation.rs  database.rs  egress.rs  extensions.rs
crates/lumen-extension-sdk/: Cargo.toml
crates/lumen-extension-sdk/examples/: echo_component.rs  subprocess_tool.rs
crates/lumen-extension-sdk/src/: lib.rs
crates/lumen-extension-sdk/wit/: lumen-extension.wit
crates/lumen-integrations/: Cargo.toml
crates/lumen-integrations/src/: extension_package.rs  extension_process.rs  extension_protocol.rs  extension_schema.rs  extension_wasm.rs  filesystem.rs  lib.rs  openai_compatible.rs  process.rs  sandbox.rs  secrets.rs
crates/lumen-integrations/tests/: extension_conformance.rs  extension_packages.rs  extension_process.rs  extension_wasm.rs  local_executors.rs  openai_compatible.rs  secrets.rs
crates/lumen-server/: Cargo.toml
crates/lumen-server/src/: lib.rs  sse.rs  state.rs
crates/lumen-server/src/routes/: mod.rs
crates/lumen-server/tests/: routes.rs
docs/: ARCHITECTURE.md  AUDIT_LOG.md  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  MILESTONE_2_DESIGN.md  MILESTONE_2_IMPLEMENTATION_PLAN.md  MILESTONE_3_DESIGN.md  MILESTONE_3_IMPLEMENTATION_PLAN.md  MILESTONE_4_DESIGN.md  MILESTONE_4_IMPLEMENTATION_PLAN.md  MILESTONE_5_DESIGN.md  MILESTONE_5_IMPLEMENTATION_PLAN.md  MODEL_ROUTING.md  PLUGIN_SYSTEM.md  README.md  REPOSITORY.md  ROADMAP.md  RUNTIME_EXECUTION.md  SECURITY.md
mock_data/: activity.yaml  approvals.yaml  audit_events.yaml  jobs.yaml  messages.yaml  models.yaml  plugins.yaml  runtime.yaml  settings_groups.yaml
scripts/: verify-linux-plugin-sandbox.sh
spec/: IMPLEMENTATION_PLAN.md  PRD.md
