[package]
name = "lumen-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lumen"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
lumen-core = { path = "../lumen-core" }
lumen-db = { path = "../lumen-db" }
lumen-integrations = { path = "../lumen-integrations" }
lumen-server = { path = "../lumen-server" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
url = "2"
uuid = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
wiremock = "0.6"
