[package]
name = "lumen-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lumen"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
lumen-core = { path = "../lumen-core" }
lumen-db = { path = "../lumen-db" }
lumen-extension-sdk = { path = "../lumen-extension-sdk" }
lumen-integrations = { path = "../lumen-integrations" }
lumen-server = { path = "../lumen-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = "0.9"
url = "2"
uuid = "1"

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
sha2 = "0.10"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
wat = "1"
