[package]
name = "lumen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9"
