[package]
name = "lumen-db"
version = "0.1.0"
edition = "2024"

[dependencies]
lumen-core = { path = "../lumen-core" }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
toml = "0.9"
