[package]
name = "lumen-integrations"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-std = "4"
cap-fs-ext = "4"
eventsource-stream = "0.2"
futures-util = "0.3"
lumen-core = { path = "../lumen-core" }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
url = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
