[package]
name = "lumen-integrations"
version = "0.1.0"
edition = "2024"

[dependencies]
cap-std = "4"
cap-fs-ext = "4"
eventsource-stream = "0.2"
futures-util = "0.3"
getrandom = "0.4"
jsonschema = { version = "0.47", default-features = false }
keyring = "4"
lumen-core = { path = "../lumen-core" }
lumen-extension-sdk = { path = "../lumen-extension-sdk" }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.9"
url = "2"
uuid = { version = "1", features = ["v4"] }
wasmtime = { version = "46", default-features = false, features = ["component-model", "cranelift", "runtime", "std", "wat"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["fs", "process", "resource", "signal"] }
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
wat = "1"
wiremock = "0.6"
