[package]
name = "lumen-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
futures-util = "0.3"
lumen-core = { path = "../lumen-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = "1"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
